点击按钮切换动画

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="str_main_shanghai">上海</string>
     <string name="str_main_hangzhou">杭州</string>
     <string name="tiaoguo">跳过</string>
+    <string name="title_activity_kang">KangActivity</string>
+    <string name="str_main_beijing">北京</string>
+    <string name="str_main_shenzhen">深圳</string>
 </resources>
