67课时结束，hangzhou界面设计完成（标签界面多fragment，获取json数据，类似知乎的，下拉显示，上拉隐藏）

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="title_activity_kang">KangActivity</string>
     <string name="str_main_beijing">北京</string>
     <string name="str_main_shenzhen">深圳</string>
+    <string name="bottom_show_behavior">com.tuoren.splash.main.hangzhou.design.BottomShowBehavior</string> />
 </resources>
